[toolsareamanager] Reset palette on unpolish

We modify the palette of the widget, so when we change style we should be polite and restore the palette, otherwise the change will persist

BUG: 511547